<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFieldNumber"
        android:text="@string/field_0"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/estedad_fd_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvFieldValue"
        android:text="@string/value"
        android:textSize="14sp"
        android:fontFamily="@font/estedad_fd_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/tvFieldDescription"
        android:text="@string/description"
        android:textSize="12sp"
        android:fontFamily="@font/estedad_fd_medium"
        android:textColor="#666666"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"/>
</LinearLayout>
